--- a/frontend/src/app/modules/features/common/notification/notification.component.html
+++ b/frontend/src/app/modules/features/common/notification/notification.component.html
@@ -1,100 +1,62 @@
- <!-- Sub Header Section -->
- <section class="sub-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-5">
-        <ol class="breadcrumb">
-		 <li class="breadcrumb-item"><a href="#" onclick="window.history.go(-1); return false;"><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a></li>
-          <li class="breadcrumb-item active" aria-current="page">Notifications</li>
-        </ol>
-      </div>
-      <div class="col-lg-7 clearfix">
-      </div>
-    </div>
-  </div>
+<!-- Sub Header Section -->
+<section class="sub-header">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-5">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="#" onclick="window.history.go(-1); return false;"><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a></li>
+					<li class="breadcrumb-item active" aria-current="page">Notifications</li>
+				</ol>
+			</div>
+			<div class="col-lg-7 clearfix">
+			</div>
+		</div>
+	</div>
 </section>
-  <!-- //Sub Header Section -->
+<!-- //Sub Header Section -->
 <section class="my-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-7 title">
-        <h2>Notifications</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="table-responsive">
-          <table class="table">
-            <thead>
-            <tr>
-              <th scope="col">Notification From</th>
-              <th scope="col">Date</th>
-              <th scope="col">Message</th>
-              <th scope="col" class="text-center">Reply </th>
-              <th scope="col" class="text-center">Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <td><a href="#">Jacky Smith</a></td>
-              <td>Aug 12, 2020</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">Sindhu Gangadharan</a></td>
-              <td>Aug 12, 2020</td>
-              <td>Dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">Balasubramanian</a></td>
-              <td>Aug 11, 2020</td>
-              <td>Ipsum dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">Hemant Raj</a></td>
-              <td>Aug 11, 2020</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">Jacky Smith</a></td>
-              <td>Aug 10, 2020</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">Sindhu Gangadharan</a></td>
-              <td>Aug 10, 2020</td>
-              <td>Dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">Balasubramanian</a></td>
-              <td>Aug 09, 2020</td>
-              <td>Ipsum dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">Hemant Raj</a></td>
-              <td>Aug 08, 2020</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, tenetur...</td>
-              <td class="text-center"><a href="#" class="text-primary"><i class="fas fa-reply"></i></a></td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-7 title">
+				<h2>Notifications</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="table-responsive">
+					<table class="table">
+						<thead>
+							<tr>
+								<th scope="col">Notification From</th>
+								<th scope="col">Date</th>
+								<th scope="col">Message</th>
+								<!-- <th scope="col" class="text-center">Reply </th>
+								<th scope="col" class="text-center">Action</th> -->
+							</tr>
+						</thead>
+						<tbody>
+							<tr *ngFor="let items of notificationDetails">
+								<td class="text-capitalize primary" style="color: #385edf;">
+									{{items?.name ? items?.name : '--'}}
+								</td>
+								<td>
+									{{items?.created_at ? (items?.created_at | date: "MMM dd, y") : '-'}}
+								</td>
+								<td>
+									{{items?.message ? items?.message : '--'}}
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<!-- <div class="d-flex justify-content-center" style="background: #f8f8f8;"  *ngIf="notificationDetailsMeta?.count > 0 && notificationDetailsMeta?.total > 10" >
+						<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
+							[length]="length"
+							[pageSize]="limit"  [pageSizeOptions]="pageSizeOptions"
+							[pageIndex]="page-1">
+						</mat-paginator>
+					</div> -->
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
