--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -137,10 +137,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
 		<li *ngIf="!router.url.includes('/agency')" class="nav-item  my-1 d-flex" style="margin-right:10px;">
-            <a [routerLink]="['/notification']" href="javascript:;"
+            <a (click)="navigateNotification()"
             class="py-1 px-2 d-flex align-items-center justify-content-center"
-            style="font-size: 22px;position: relative;"
-              href="javascript:;">
+            style="font-size: 22px;position: relative;cursor:pointer;"
+              >
               <i class="fas fa-bell" style="font-size: 26px;"></i>
 			  <span class="bell-span" ></span>
 			  <span class="bell-spans" id="notifi_count">0</span>
@@ -211,10 +211,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li *ngIf="!router.url.includes('/agency')" class="nav-item  my-1 d-flex" style="margin-right:10px;">
-            <a [routerLink]="['/notification']" href="javascript:;"
+            <a (click)="navigateNotification()"
             class="py-1 px-2 d-flex align-items-center justify-content-center"
-            style="font-size: 22px;position: relative;"
-              href="javascript:;">
+            style="font-size: 22px;position: relative;cursor:pointer;"
+              >
               <i class="fas fa-bell" style="font-size: 26px;"></i>
 			  <span class="bell-span" ></span>
 			  <span class="bell-spans" id="notifi_count">0</span>
