--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -142,8 +142,8 @@
             style="font-size: 22px;position: relative;cursor:pointer;"
               >
               <i class="fas fa-bell" style="font-size: 26px;"></i>
-			  <span class="bell-span" ></span>
-			  <span class="bell-spans" id="notifi_count">0</span>
+			  <span class="bell-span" id="notifi_color" style="display:none;"></span>
+			  <span class="bell-spans" id="notifi_count" style="display:none;">0</span>
             </a>
           </li>
           <li class="nav-item" style="margin-top: 10px;">
@@ -216,8 +216,8 @@
             style="font-size: 22px;position: relative;cursor:pointer;"
               >
               <i class="fas fa-bell" style="font-size: 26px;"></i>
-			  <span class="bell-span" ></span>
-			  <span class="bell-spans" id="notifi_count">0</span>
+			  <span class="bell-span" id="notifi_color" style="display:none;"></span>
+			  <span class="bell-spans" id="notifi_count" style="display:none;">0</span>
             </a>
           </li>
           <li class="nav-item dropdown">
