--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -189,10 +189,14 @@
                           <i class="fas fa-file-alt"></i> {{"shared.resume" | translate }}
                         </a>
                       </span>
-                      <span class="ml-1">
-												<a *ngIf="utilsHelperService.isEmptyObj(item?.job_application) && selectedJob?.status ==1 " (click)="onToggleSendMail(true, item)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-												<i class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate }} </a>
-											</span>
+                      <span class="ml-1"  *ngIf="item?.mail !=true">
+						<a *ngIf="utilsHelperService.isEmptyObj(item?.job_application) && selectedJob?.status ==1 " (click)="onToggleSendMail(true, item)" class="btn btn-outline-orange btn-sm" href="javascript:;">
+						<i class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate }} </a>
+					</span>
+                      <span class="ml-1"  *ngIf="item?.mail ==true">
+						<a  class="btn btn-outline-orange btn-sm btn-outline-orange-active" href="javascript:;">
+						<i class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate }} </a>
+					</span>
                     </div>
                     <div *ngIf="savedProfiles?.includes(item?.id) " (click)="onUnSaveProfile(item)" class="save-icon active" tooltip="Un Save"><i class="far fa-bookmark"></i></div>
                     <div *ngIf="!savedProfiles?.includes(item?.id) " (click)="onSaveProfile(item)" class="save-icon" tooltip="Save"><i class="far fa-bookmark"></i></div>
