--- a/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
+++ b/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
@@ -1,7 +1,7 @@
 <ng-template #sendMailModal let-modal>
   <div class="modal-header">
     <h5 class="modal-title" id="sendMail">{{"shared.jobPreview" | translate}}</h5>
-    <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <button (click)="onClickCloseBtns(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
     </div>
@@ -42,7 +42,7 @@
 	</div>
     </div>
     <div class="modal-footer">
-    <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary" data-dismiss="modal">{{"shared.cancel" | translate}}</button>
+    <button (click)="onClickCloseBtns(false)" type="button" class="btn btn-secondary" data-dismiss="modal">{{"shared.cancel" | translate}}</button>
     <button (click)="onShortListUser()" type="button" class="btn btn-theme-blue" data-dismiss="modal" data-toggle="modal" data-target="#successMsg" >{{"shared.sendMail" | translate}}</button>
     </div>
 </ng-template>
