--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -154,8 +154,8 @@
            <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
            <span class="d-flex align-items-center">
-		    <img class="img-circule" *ngIf="currentEmployerDetails?.photo" [src]="currentEmployerDetails?.photo ? (currentEmployerDetails?.meta?.photo?.path+'/'+ currentEmployerDetails?.meta?.photo?.folder+'/'+currentEmployerDetails?.meta?.photo?.sizes?.medium+'/'+currentEmployerDetails?.photo)+'?v='+ randomNum: 'assets/images/user-img-icon.jpg'">
-            <ngx-avatar *ngIf="!currentEmployerDetails?.photo && (currentEmployerDetails?.first_name || currentEmployerDetails?.last_name)" class="float-left mr-2" size="35" name="{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}"></ngx-avatar>
+		    <img class="img-circule" *ngIf="currentEmployerDetails?.photo && currentEmployerDetails?.photo != 'default.png' " [src]="currentEmployerDetails?.photo ? (currentEmployerDetails?.meta?.photo?.path+'/'+ currentEmployerDetails?.meta?.photo?.folder+'/'+currentEmployerDetails?.meta?.photo?.sizes?.medium+'/'+currentEmployerDetails?.photo)+'?v='+ randomNum: 'assets/images/user-img-icon.jpg'">
+            <ngx-avatar *ngIf="(!currentEmployerDetails?.photo || currentEmployerDetails?.photo == 'default.png' ) && (currentEmployerDetails?.first_name || currentEmployerDetails?.last_name)" class="float-left mr-2" size="35" name="{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}"></ngx-avatar>
             <!-- <span class="letter-custom-abb">{{onChangeNameAbb(currentEmployerDetails?.first_name + ' ' + currentEmployerDetails?.last_name)}}</span> -->
             <span class="text-capitalize">{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}</span>
           </span>
