--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -1221,7 +1221,7 @@
 					</li>
 				</ul>
 			</div>
-			<div *ngIf="isOtherDesired">
+			<div *ngIf="isOtherNice">
 				<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
 					<li class="list-group-item text-capitalize handsExp" *ngIf="checkDataOthers(jobInfo?.match_select[item?.id],'2')" [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"   >			  
 					  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
