--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -29,7 +29,7 @@
           <h3 class="text-white">Video Title Content</h3>
           <h5 class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
           </h5>
-          <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">View More
+          <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" style="margin-top:10px;"  role="button">View More
           <i class="fas fa-angle-double-right ml-3 align-middle animate__animated animate__heartBeat animate__infinite animate__slow	2s"></i>
           </a>
         </div>
@@ -57,9 +57,11 @@
       </div>
       <div class="col-lg-6">
         <div class="content-left">
-          <h6>SAP World Employer</h6>
-          <h3>First Heading Content </h3>
-          <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. It has survived not only five centuries, but also the leap into electronic typesetting.
+          <!-- <h6>SAP World Employer</h6> -->
+          <h3>Craft your requirement </h3>
+          <h5>Post your requirements effortlessly <br>
+		  Manage the essential skills you expect from the talent  <br>
+			We guaranty effective talent matches with the right set of information
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
@@ -71,9 +73,10 @@
     <div class="row mt-5">
       <div class="col-lg-6  ml-auto">
         <div class="content-right">
-          <h6>SAP World Employer</h6>
-          <h3>Second  Heading Content </h3>
-          <h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+         <!--  <h6>SAP World Employer</h6> -->
+          <h3>Get not just matches, Get THE MATCHES </h3>
+          <h5>Get instant matches based on your Required, Desired and Nice to have 
+Improve your decision accuracy in talent shortlist
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
@@ -95,9 +98,12 @@
       </div>
       <div class="col-lg-6">
         <div class="content-left">
-          <h6>SAP World Employer</h6>
-          <h3>Third  Heading Content </h3>
-          <h5>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble.
+          <!-- <h6>SAP World Employer</h6> -->
+          <h3>Its not just resume, its the work that needs attention  </h3>
+          <h5>You will not just be told you've got a match.
+Find every details against your curated requirements
+Compare multiple talents against your job
+You can do all those before viewing the resume.
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
