--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -40,14 +40,14 @@
 				<div class="col-lg-6">			
 					<div class="left-sec animate__animated  animate__fadeInLeft">					
 						<h1>Employer</h1>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </p>
+						<p>Get used to the hassle-free Talent finding Platform. Get real time matches in no time! </p>
 						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">Get Started</a>
 					</div>
 				</div>
 				<div class="col-lg-6">	
 					<div class="right-sec animate__animated  animate__fadeInRight">						
 						<h1>Talent</h1>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+						<p>When we say matching jobs, we literally meant matches</p>
 						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">Get Started</a>
 					</div>
 				</div>	
@@ -123,7 +123,7 @@
 				<div class="col-lg-8">
 					<div class="heading">
 						<h1>Solving recruitment sensibly</h1>
-						<h5>Study says employer make up their mind in 7.4 seconds for screening a profile. We provide details that's most needed</h5>
+						<h5>Study says employer make up their mind in 7.4 seconds for screening a profile. We deliver the much-needed details in a platter.</h5>
 						
 					</div>
 					<div class="mt-5 d-flex">
@@ -132,7 +132,7 @@
 								<img src="assets/images/sapw-info-icon1.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Matches</h3>
-									<p>View matches simply based on the must met critriea</p>
+									<p>View matches based on your must have, good to have, optional</p>
 								</div>
 							</div>
 						</div>
@@ -141,7 +141,7 @@
 								<img src="assets/images/sapw-info-icon2.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Compare profile</h3>
-									<p>Compare the best fit across all matches</p>
+									<p>Compare multiple profiles, jobs in a single view</p>
 								</div>
 							</div>
 						</div>
@@ -152,7 +152,7 @@
 								<img src="assets/images/sapw-info-icon3.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Holistic view</h3>
-									<p>Provide elagant view of skills matching,missing and more</p>
+									<p> View whats missing, whats matching and whats more in a profile against your post </p>
 								</div>
 							</div>
 						</div>
@@ -161,7 +161,7 @@
 								<img src="assets/images/sapw-info-icon4.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Full control</h3>
-									<p>Have control on you profile </p>
+									<p>Manage your profile what to display and what not to </p>
 								</div>
 							</div>
 						</div>
